--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://dimplejs.org/dist/dimple.v2.0.0.min.js"></script>
-  <script type="text/javascript" src="./main.js"></script>
+  <script type="text/javascript" src="./main2.js"></script>
   
     <style>
       circle.dimple-series-1 {
