--- a/index.html
+++ b/index.html
@@ -5,22 +5,14 @@
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://dimplejs.org/dist/dimple.v2.0.0.min.js"></script>
   <script type="text/javascript" src="./main.js"></script>
+  <link rel="stylesheet" href="style.css" type="text/css">
   
     <style>
       circle.dimple-series-1 {
         fill: red;
       }
-      h2 {
-        text-align: center;
-      }
-      h3 {
-        text-align: left;
-      }
-      p {
-        font-size: 1.5em;
-      }
     </style>
-    
+  
     <script type="text/javascript">
       /*
        global variables
